--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
 
     <!--=============== SWIPER CSS ===============-->
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css" />
@@ -37,7 +37,7 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
             <li>
-              <a href="#home" class="nav__link">Home</a>
+              <a href="#home" class="nav__link active-link">Home</a>
             </li>
 
             <li>
@@ -72,31 +72,483 @@
     <!--==================== MAIN ====================-->
     <main class="main">
       <!--==================== HOME ====================-->
-      <section class="home section" id="home"></section>
+      <section class="home section" id="home">
+        <img
+          src="assets/img/home-lines-bg.svg"
+          alt="image"
+          class="home__lines"
+        />
+
+        <div class="home__container container grid">
+          <div class="home__content grid">
+            <div class="home__data">
+              <h1 class="home__title">
+                Create The <br />
+                Constructions <br />
+                You Want Here
+              </h1>
+
+              <p class="home__description">
+                We provide the best home design, construction and maintenance
+                services for you and your family.
+              </p>
+
+              <div class="home__buttons">
+                <a href="#servies" class="button">Our Services</a>
+
+                <a href="#projects" class="button__link">
+                  <span>View Projects</span>
+                  <i class="ri-arrow-right-line"></i>
+                </a>
+              </div>
+            </div>
+
+            <div class="home__info">
+              <div>
+                <h3 class="home__info-title">10+</h3>
+                <p class="home__info-description">
+                  Years of <br />
+                  Experience
+                </p>
+              </div>
+
+              <div>
+                <h3 class="home__info-title">200</h3>
+                <p class="home__info-description">
+                  Complete <br />
+                  Projects
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="home__images">
+            <img
+              src="assets/img/home-img-1.png"
+              alt="image"
+              class="home__img-1"
+            />
+            <img
+              src="assets/img/home-img-2.png"
+              alt="image"
+              class="home__img-2"
+            />
+          </div>
+        </div>
+      </section>
 
       <!--==================== ABOUT ====================-->
-      <section class="about section" id="about"></section>
+      <section class="about section" id="about">
+        <div class="about__container container grid">
+          <div class="about__data">
+            <span class="section__subtitle">ABOUT US</span>
+            <h2 class="section__title">
+              We Provide The Best <br />
+              Service To Build
+            </h2>
+
+            <p class="about__description">
+              We strive to provide the best professionals to make your project a
+              construction masterpiece, something unique and unmatched.
+            </p>
+
+            <ul class="about__list grid">
+              <li class="about__list-item">
+                <i class="ri-checkbox-circle-line"></i>
+                <span>Professional workers</span>
+              </li>
+
+              <li class="about__list-item">
+                <i class="ri-checkbox-circle-line"></i>
+                <span>Guaranteed quality</span>
+              </li>
+
+              <li class="about__list-item">
+                <i class="ri-checkbox-circle-line"></i>
+                <span>Extensive experience</span>
+              </li>
+
+              <li class="about__list-item">
+                <i class="ri-checkbox-circle-line"></i>
+                <span>We quote your project</span>
+              </li>
+            </ul>
+
+            <a href="#projects" class="button">View Projects</a>
+          </div>
+
+          <div class="about__images">
+            <img
+              src="assets/img/about-img-1.png"
+              alt="image"
+              class="about__img-1"
+            />
+            <img
+              src="assets/img/about-img-2.png"
+              alt="image"
+              class="about__img-2"
+            />
+          </div>
+        </div>
+      </section>
 
       <!--==================== SERVICES ====================-->
-      <section class="services section" id="services"></section>
+      <section class="services section" id="services">
+        <div class="services__container container grid">
+          <div class="services__data">
+            <div>
+              <span class="section__subtitle">OUR SERVICES</span>
+              <h2 class="section__title">
+                High Quality <br />
+                Construction Services
+              </h2>
+            </div>
+
+            <p class="services__description">
+              We provide multiple services for you, offering confidence and
+              security in construction.
+            </p>
+
+            <a href="#contact" class="button">Contact Now</a>
+          </div>
+
+          <div class="services__swiper swiper">
+            <div class="swiper-wrapper">
+              <article class="services__card swiper-slide">
+                <div class="services__icon">
+                  <i class="ri-building-line"></i>
+                </div>
+
+                <h3 class="services__title">
+                  Housing <br />
+                  Construction
+                </h3>
+
+                <p>
+                  We build with the best professionals and high-quality work for
+                  a safe and effective home.
+                </p>
+              </article>
+
+              <article class="services__card swiper-slide">
+                <div class="services__icon">
+                  <i class="ri-home-office-line"></i>
+                </div>
+
+                <h3 class="services__title">
+                  Construction Of <br />
+                  Home Areas
+                </h3>
+
+                <p>
+                  We build with the best professionals and high-quality work for
+                  a safe and effective home.
+                </p>
+              </article>
+
+              <article class="services__card swiper-slide">
+                <div class="services__icon">
+                  <i class="ri-tools-line"></i>
+                </div>
+
+                <h3 class="services__title">
+                  Maintenance & <br />
+                  Repair
+                </h3>
+
+                <p>
+                  We build with the best professionals and high-quality work for
+                  a safe and effective home.
+                </p>
+              </article>
+
+              <article class="services__card swiper-slide">
+                <div class="services__icon">
+                  <i class="ri-box-3-line"></i>
+                </div>
+
+                <h3 class="services__title">
+                  Installation Of <br />
+                  ceramics & Others
+                </h3>
+
+                <p>
+                  We build with the best professionals and high-quality work for
+                  a safe and effective home.
+                </p>
+              </article>
+
+              <article class="services__card swiper-slide">
+                <div class="services__icon">
+                  <i class="ri-drop-line"></i>
+                </div>
+
+                <h3 class="services__title">
+                  Water & Drainage <br />
+                  Installation
+                </h3>
+
+                <p>
+                  We build with the best professionals and high-quality work for
+                  a safe and effective home.
+                </p>
+              </article>
+            </div>
+          </div>
+
+          <!-- Navigation buttons -->
+          <div class="swiper-button-prev">
+            <i class="ri-arrow-left-line"></i>
+          </div>
+          <div class="swiper-button-next">
+            <i class="ri-arrow-right-line"></i>
+          </div>
+        </div>
+
+        <div class="services__shape"></div>
+      </section>
 
       <!--==================== PROJECTS ====================-->
-      <section class="projects section" id="projects"></section>
+      <section class="projects section" id="projects">
+        <span class="section__subtitle">OUR PROJECTS</span>
+        <h2 class="section__title">
+          Latest Completed <br />
+          Projects
+        </h2>
+
+        <div class="projects__container container grid">
+          <article class="projects__card">
+            <img
+              src="assets/img/projects-img-1.png"
+              alt="image"
+              class="projects__img"
+            />
+
+            <div class="projects__data">
+              <span>House construction</span>
+              <h2 class="projects__title">Two Story House</h2>
+              <span class="projects__date">January 15, 2024</span>
+
+              <p>
+                Construction of a two-story house with columns, foundations,
+                floor, ceilings and others.
+              </p>
+            </div>
+          </article>
+
+          <article class="projects__card">
+            <img
+              src="assets/img/projects-img-2.png"
+              alt="image"
+              class="projects__img"
+            />
+
+            <div class="projects__data">
+              <span>Maintenance & Repair</span>
+              <h2 class="projects__title">Stairs & Columns</h2>
+              <span class="projects__date">May 21, 2024</span>
+
+              <p>
+                Construction of a two-story house with columns, foundations,
+                floor, ceilings and others.
+              </p>
+            </div>
+          </article>
+
+          <article class="projects__card">
+            <img
+              src="assets/img/projects-img-3.png"
+              alt="image"
+              class="projects__img"
+            />
+
+            <div class="projects__data">
+              <span>Construction Of Home Areas</span>
+              <h2 class="projects__title">kitchen Room</h2>
+              <span class="projects__date">July 03, 2024</span>
+
+              <p>
+                Construction of a two-story house with columns, foundations,
+                floor, ceilings and others.
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
 
       <!--==================== CONTACT ====================-->
-      <section class="contact section" id="contact"></section>
+      <section class="contact section" id="contact">
+        <div class="container">
+          <span class="section__subtitle">CONTACT ME</span>
+          <h2 class="section__title">Write To Us & Build</h2>
+
+          <div class="contact__container grid">
+            <img
+              src="assets/img/contact-img.png"
+              alt="image"
+              class="contact__img"
+            />
+
+            <div class="contact__data grid">
+              <div class="contact__card">
+                <div class="contact__icon">
+                  <i class="ri-map-pin-2-line"></i>
+                </div>
+
+                <h3 class="contact__title">I'm here</h3>
+                <address class="contact__info">
+                  Peru - Lima <br />
+                  Av.Moon #321
+                </address>
+              </div>
+
+              <div class="contact__card">
+                <div class="contact__icon">
+                  <i class="ri-phone-line"></i>
+                </div>
+
+                <h3 class="contact__title">Talk to me</h3>
+                <address class="contact__info">
+                  +00-987-7654-321 <br />
+                  +11-012345
+                </address>
+              </div>
+
+              <div class="contact__card">
+                <div class="contact__icon">
+                  <i class="ri-chat-1-line"></i>
+                </div>
+
+                <h3 class="contact__title">Chat with me</h3>
+
+                <div class="contact__social">
+                  <a
+                    href="https://api.whatsapp.com/send?phone=51123456789&text=Hello, more information!"
+                    target="_blank"
+                    class="contact__social-link"
+                  >
+                    <i class="ri-whatsapp-line"></i>
+                  </a>
+
+                  <a
+                    href="https://m.me/nguyenvanduy"
+                    target="_blank"
+                    class="contact__social-link"
+                  >
+                    <i class="ri-messenger-line"></i>
+                  </a>
+
+                  <a
+                    href="https://t.me/telegram"
+                    target="_blank"
+                    class="contact__social-link"
+                  >
+                    <i class="ri-telegram-line"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--==================== FOOTER ====================-->
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__container container grid">
+        <div>
+          <a href="#" class="footer__logo">
+            <i class="ri-building-3-line"></i>
+            <span>Construct</span>
+          </a>
+
+          <p class="footer__description">
+            We build security <br />
+            and trust in homes.
+          </p>
+
+          <address class="footer__email">Email: construct123@email.com</address>
+        </div>
+
+        <div class="footer__content grid">
+          <div>
+            <h3 class="footer__title">Company</h3>
+
+            <ul class="footer__links">
+              <li>
+                <a href="#about" class="footer__link">About Us</a>
+              </li>
+
+              <li>
+                <a href="#services" class="footer__link">Services</a>
+              </li>
+
+              <li>
+                <a href="#projects" class="footer__link">Projects</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="footer__title">Information</h3>
+
+            <ul class="footer__list">
+              <li>
+                <address class="footer__info">
+                  Peru - Lima <br />
+                  Av.Moon #321
+                </address>
+              </li>
+
+              <li>
+                <address class="footer__info">9AM - 11PM</address>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3 class="footer__title">Social Media</h3>
+
+            <div class="footer__social">
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                class="footer__social-link"
+              >
+                <i class="ri-facebook-circle-line"></i>
+              </a>
+
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="footer__social-link"
+              >
+                <i class="ri-instagram-line"></i>
+              </a>
+
+              <a
+                href="https://twitter.com/"
+                target="_blank"
+                class="footer__social-link"
+              >
+                <i class="ri-twitter-x-line"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <span class="footer__copy"> &#169; All Rights Reserved By Duy </span>
+    </footer>
 
     <!--========== SCROLL UP ==========-->
+    <a href="#" class="scrollup" id="scroll-up">
+      <i class="ri-arrow-up-line"></i>
+    </a>
 
     <!--=============== SCROLLREVEAL ===============-->
     <script src=""></script>
 
     <!--=============== SWIPER JS ===============-->
-    <script src=""></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
 
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
